# nn-zero-to-hero

./: .gitignore  README.md  pyproject.toml  requirements.txt
book/: README.md
book/01-micrograd/: README.md  micrograd_exercise.ipynb  micrograd_lecture_first_half_roughly.ipynb  micrograd_lecture_second_half_roughly.ipynb  note.ipynb
book/01-micrograd/resources/: insights.md
book/01-micrograd/resources/micrograd/test/: micrograd_playground.ipynb
book/02-makemore-bigram/: README.md  exercise.ipynb  makemore_part1_bigrams.ipynb  notes.ipynb
book/02-makemore-bigram/resources/: insights.md
book/03-makemore-mlp/: README.md  exercise.ipynb  makemore_part2_mlp.ipynb  notes.ipynb
book/03-makemore-mlp/resources/: insights.md
book/04-makemore-batchnorm/: README.md  build_makemore_batchnorm.ipynb  makemore_part3_bn.ipynb  notes.ipynb
book/04-makemore-batchnorm/resources/: elu_initialization.ipynb  insights.md
book/05-makemore-manual-backprop/: README.md  makemore_part4_backprop.ipynb  manual_backprop_exercise.ipynb  notes.ipynb
book/05-makemore-manual-backprop/resources/: insights.md
book/06-makemore-wavenet/: README.md  makemore_part5_cnn1.ipynb  notes.ipynb
book/06-makemore-wavenet/resources/: insights.md
book/07-build-gpt/: README.md  notes.ipynb
book/08-tokenizer/: README.md  notes.ipynb  tokenizer_exercise.ipynb
book/09-reproduce-gpt2/: README.md  notes.ipynb  run_local.sh  run_server.sh
book/10-deep-dive-llms/: README.md  notes.ipynb
book/App-microgpt/: README.md
book/_cs182/: README.md
